--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         <h1 class="text-5xl font-bold gradient-text">RTV</h1>
                     </a>
                 </div>
-                <p class="text-gray-400 mb-8">自由观影，畅享精彩</p>
+                <p class="text-gray-400 mb-8">Free!</p>
             </header>
             
 
@@ -299,7 +299,7 @@
                         </svg>
                         <span class="gradient-text font-bold">RTV</span>
                     </div>
-                    <p class="text-gray-500 text-sm mt-2 text-center md:text-left">© 2025 RTV - 自由观影，畅享精彩</p>
+                    <p class="text-gray-500 text-sm mt-2 text-center md:text-left">© 2025 RTV - Free!</p>
                 </div>
                 
                 <div class="text-center md:text-right">
